--- a/public/index.html
+++ b/public/index.html
@@ -123,8 +123,36 @@
   </main>
 
   <footer>
-      <p>&copy; 2024 Mateus & Mathiro. Todos os direitos reservados.</p>
-  </footer>
+    <div class="footer-container">
+        <div class="footer-logo">
+            <img src="img/logo.png" alt="Logo">
+        </div>
+        <div class="footer-expertise">
+            <h3>Especialidades:</h3>
+            <ul>
+                <li>Criação de Personagens</li>
+                <li>Gerenciamento de Inventário</li>
+                <li>Banco de Magias</li>
+                <li>Interface Intuitiva para Jogadores</li>
+                <li>Gestão de Notas e Histórias</li>
+            </ul>
+        </div>
+        <div class="footer-contact">
+            <h3>Contato</h3>
+            <p>hello@seusite.com</p>
+            <p>(43) 0000-0000</p>
+            <div class="footer-socials">
+                <!-- Redes sociais -->
+                <a href="https://github.com/Mtreck"><i class="fab fa-behance"></i><img class="git-icon" src="img/git-icon.png" alt="">Mtreck</a>
+                <a href="https://github.com/MateusVSS"><i class="fab fa-behance"></i><img class="git-icon" src="img/git-icon.png" alt="">MateusVSS</a>
+            </div>
+        </div>
+    </div>
+    <!-- Copyright -->
+    <div class="footer-copyright">
+        <p>&copy; 2024 Mateus & Mathiro. Todos os direitos reservados.</p>
+    </div>
+</footer>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         const loadEl = document.querySelector('#load');
