Adicionado "Trocar Personagem", e funcionalidade de Magias Preparadas

--- a/public/Jogador/personagem.html
+++ b/public/Jogador/personagem.html
@@ -14,10 +14,11 @@
     <header>
         <div class="logo-container text-left">
             <a id="logout-btn" class="back-button rounded">&#8592;</a>
-            <img src="../img/logo.png" alt="Dragon's Grimoire Logo">
+            <img class="mt-4 mb-0" src="../img/logo.png" alt="Dragon's Grimoire Logo">
             <strong>
-                <h1>D&D 5e Ficha de Personagem</h1>
+                <h1 class="mt-4 mb-0">D&D 5e Ficha de Personagem</h1>
             </strong>
+            <button id="change-character-btn" class="change-character rounded">Trocar Personagem</button>
         </div>
     </header>
     <main class="grid-container">
@@ -71,6 +72,9 @@
                 <button id="buscar-magias-btn" class="px-4 py-2 rounded" type="button">Buscar Magia</button>
             </div>
             <div id="spells-list" class="mt-4">
+            </div>
+            <div class="text-center">
+                <button id="save-prepared-spells" class="px-4 py-2 rounded" type="button">Salvar Magias Preparadas</button>
             </div>
         </section>
     </main>
