--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,10 @@
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
+    <!-- <link rel="stylesheet" href="index.css"> -->
   </head>
-  <body>
-    <header>
+  <!-- <body> -->
+    <!-- <header>
         <div class="logo-container">
             <img src="img/logo.png" alt="Arcanum Logo">
         </div>
@@ -54,13 +54,13 @@
             <div class="user-option">
                 <img  class="img_jogador" src="img/jogadores.jpg" alt="Jogador">
                 <a href="./Jogador/login.html"><button class="player-button">Jogador</button></a>
-                <!-- <p class="p_jogador">Crie seu personagem,liste seus itens e suas magias.</p> -->
-            </div>
+                 <p class="p_jogador">Crie seu personagem,liste seus itens e suas magias.</p>
+             </div>
 
             <div class="user-option">
                 <img   class="img_mestre" src="img/mestre.jpg" alt="Mestre">
                 <a href="./Mestre/html/cadastro_itens.html"><button class="dm-button">Mestre</button></a>
-                <!-- <p>Crie e gerencie itens, magias e anotações para suas campanhas.</p> -->
+                <p>Crie e gerencie itens, magias e anotações para suas campanhas.</p>
             </div>
         </section>
 
@@ -111,6 +111,6 @@
           loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
         }
       });
-    </script>
+    </script> -->
   </body>
 </html>
