Corrige função de editar itens

--- a/public/Jogador/personagem.html
+++ b/public/Jogador/personagem.html
@@ -236,7 +236,7 @@
         <div class="modal-content">
             <div class="container mb-3">
                 <h1>Editar item</h1>
-                <span class="btn-danger px-3 py-1 rounded close-button">&times;</span>
+                <span class="btn-danger px-3 py-1 rounded close-button" onclick="closeModal('edit-item-modal')">&times;</span>
             </div>
             <form id="edit-item-form">
                 <label for="edit-item-nome">Nome:</label>
